--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,21 +7,17 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
+    name: Nwe Zin Phyo
     tagline: Full Stack Developer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
-    telegram: # add your nickname without '@' sign
-    gitlab:
-    bitbucket:
-    twitter: '@webjeda'
+    email: nwezinphyo47@gmail.com
+    phone: +(85)9098592622
+    website:  #do not add http://
+    linkedin: nwe-zin-phyo-557903204
+    github: nwezinphyo
+    twitter: '__2622nzp'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
@@ -30,11 +26,9 @@ sidebar:
       - idiom: English
         level: Native
 
-      - idiom: French
+      - idiom: Myanmar
         level: Professional
 
-      - idiom: Spanish
-        level: Professional
 
     interests:
       - item: Climbing
@@ -49,16 +43,13 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      I have more than 2 years of experience in my professional journey with strong background on web development and Japanese design documents . Looking to leverage my knowledge and experience into a role as project manager.
+
+
 education:
-    - degree: MSc in Computer Science
-      university: University of London
-      time: 2011 - 2012
+    - degree: Bachelor of Computer Science (B.C.Sc)
+      university: University of Computer Studies ,Yangon(UCSY)
+      time: 2012 - 2018
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -67,9 +58,9 @@ education:
         pretium quis, sem.
           - Bullet point
           - Bullet point
-    - degree: BSc in Applied Mathematics
-      university: Bristol University
-      time: 2007 - 2011
+    - degree: Certificate of Completion (JAVA Training )	 
+      university: Tokyo IT School
+      time: 1/8/2019 - 31/10/2019
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -78,44 +69,68 @@ education:
         pretium quis, sem.
           - Bullet point
           - Bullet point
+    - degree: Certificate of Result and score of N3	 
+      university: Japanese-Language Proficiency Test(JLPT)
+      time: 2019 - 2019
+      details: |
+        Describe your study here lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+        sociis natoque penatibus et magnis dis parturient montes, nascetur
+        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
+        pretium quis, sem.
+          - Bullet point
+          - Bullet point
+
 experiences:
-    - role: Lead Developer
-      time: 2015 - Present
-      company: Startup Hubs, San Francisco
+    - role: Developer
+      time: August 2019 - Present
+      company: Nisseicom Co.ltd,Tokyo,Japan
       details: |
         Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-        enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-        error sit voluptatem accusantium doloremque laudantium, totam rem
-        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-        architecto beatae vitae dicta sunt explicabo.
-          - Bullet point
-          - Bullet point
-    - role: Senior Software Engineer
-      time: 2014 - 2015
-      company: Google, London
+        adipiscing elit. 
+          - Developer of Accounting System using Java,Javascript,HTML,CSS
+
+    - role: Developer
+      time: Nov 2019 -July 2020
+      company: Sunmelx Co.ltd,Tokyo,Japan
       details: |
         Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
-    - role: UI Developer
-      time: 2012 - 2014
-      company: Amazon, London
+        adipiscing elit.
+          - Developer of internal inventory management system using Filemaker(Take on digital transformation. Build custom apps.
+          - Automate workflows. All with the world's leading Workplace Innovation Platform.
+
+    - role: Java Training Course
+      time: August 2019 - October 2019
+      company: Tokyo IT School,Tokyo,Japan
       details: |
         Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
+        adipiscing elit.
+          - Training of Java/Oracle/HTML/JavaScript
+          - Group work and Development Training
+
+    - role: Internship at a Japanese company as a worker
+      time: May 2019 - July 2019
+      company: Sunmelx Co.ltd,Tokyo Japan
+      details: |
+        Describe your role here lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit.
+          - Participated in the internship program in japan
+          - Learned the Japanese working environment and manner of work
+          - Continue to manage work attendance system using FileMaker
+
+    - role: Internship at a Japanese company as a student
+      time: June 2018 - April 2019
+      company: Myanmar Doraku Co.ltd,Yangon Myanmar
+      details: |
+        Describe your role here lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit.
+          - Participated in the internship program for final year project in Myanmar
+          - Learned the Japanese working environment and manner of work
+          - Started developing an attendance system using FileMaker with two other members
+          - Learned the Japanese and manner of Japanese work environment
+
+
+
 projects:
     title: Projects
     intro: >
@@ -123,25 +138,9 @@ projects:
       section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
     assignments:
-      - title: Velocity
+      - title: Internship Program for final year project
         link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
-
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
-
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
+        tagline: "Participated in the internship program in Myanmar with three members of group, Started developing an attendance system using FileMaker with two other members."
 
 publications:
     title: Publications
