--- a/_data/data.yml
+++ b/_data/data.yml
@@ -40,6 +40,19 @@ sidebar:
       - item: Cooking
         link:
 
+
+career-about:
+  title: Personal Details
+  summary: |
+    Gender         : Female
+    Date of Birth  : 26 May 1997
+    Nationality    : Myanmar
+    Religion       : Buddhist
+    Marital Status : Single
+    Languages      : English, Myanmar
+    
+    Address        : 174-0041	1-16-23-511 Fundo,Itabashi-ku,Tokyo,Japan.
+
 career-profile:
     title: Career Profile
     summary: |
